# sec-grep

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/sec-grep/: Cargo.toml
crates/sec-grep-core/: Cargo.toml  venues.yaml
crates/sec-grep-core/src/: abstracts.rs  config.rs  db.rs  dblp.rs  error.rs  lib.rs  model.rs  output.rs  query.rs
crates/sec-grep-core/tests/: e2e.rs
crates/sec-grep/src/: main.rs  tui.rs
