[workspace]
resolver = "2"
members = ["crates/sec-grep-core", "crates/sec-grep"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Fast local search for security conference papers"
license = "MIT"
repository = "https://github.com/philippnormann/sec-grep"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "query"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
scraper = "0.27"
csv = "1"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
directories = "6"
tempfile = "3"
url = "2"
