[package]
name = "sec-grep-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
scraper.workspace = true
csv.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
