[package]
name = "sec-grep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sec-grep"
path = "src/main.rs"

[dependencies]
sec-grep-core = { version = "0.1.0", path = "../sec-grep-core" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
url.workspace = true
